--- a/coffee/src/app/coffee/coffee.component.html
+++ b/coffee/src/app/coffee/coffee.component.html
@@ -1,3 +1,81 @@
-<p>
-  coffee works!
-</p>
+<form class="form">
+  <mat-card>
+      <mat-card-title>
+        Basic Coffee Information
+      </mat-card-title>
+      <mat-input-container>
+        <input matInput placeholder="Coffee name" name="name" [(ngModel)]="coffee.name">
+      </mat-input-container>
+
+    <mat-input-container>
+      <mat-select placeholder="Coffee Type" name="type" [(ngModel)]="coffee.type">
+        <mat-option *ngFor="let type of types" [value]="type">
+          {{ type }}
+        </mat-option>
+      </mat-select>
+    </mat-input-container>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-title>
+      Place Information
+    </mat-card-title>
+    <mat-input-container>
+      <input matInput placeholder="Place name" name="place" [(ngModel)]="coffee.place">
+    </mat-input-container>
+
+    <mat-input-container>
+      <input matInput placeholder="Address" name="address" [(ngModel)]="coffee.location.address">
+    </mat-input-container>
+
+    <mat-input-container>
+      <input matInput placeholder="City" name="city" [(ngModel)]="coffee.location.city">
+    </mat-input-container>
+  </mat-card>
+
+  <mat-card>
+    <mat-card-title>
+      Ratings
+    </mat-card-title>
+    <mat-card-subtitle>Overall Raiting</mat-card-subtitle>
+    <mat-slider max="10" thumbLabel tickInterval="1" name="rating" [(ngModel)]="coffee.rating"></mat-slider>
+
+    <mat-card-subtitle>
+      <mat-slide-toggle [checked]="tastingEnabled" #tastingSelector (change)="tastingRatingsChecked(tastingSelector.checked)">Tasting Ratings</mat-slide-toggle>
+    </mat-card-subtitle>
+
+    <section id="tasting" *ngIf="tastingSelector.checked">
+
+      <label>Aroma</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="aroma" [(ngModel)]="coffee.tastingRating.aroma"></mat-slider>
+
+      <label>Body</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="body" [(ngModel)]="coffee.tastingRating.body"></mat-slider>
+
+      <label>Flavor</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="flavor" [(ngModel)]="coffee.tastingRating.flavor"></mat-slider>
+
+      <label>Intencity</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="intencity" [(ngModel)]="coffee.tastingRating.intencity"></mat-slider>
+
+      <label>Sweetness</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="sweetness" [(ngModel)]="coffee.tastingRating.sweetness"></mat-slider>
+
+      <label>Aftertaste</label>
+      <mat-slider max="10" thumbLabel tickInterval="1" name="aftertaste" [(ngModel)]="coffee.tastingRating.aftertaste"></mat-slider>
+
+    </section>
+  </mat-card>
+
+  <mat-card>
+    <mat-input-container>
+      <textarea matInput placeholder="Notes" name="notes" [(ngModel)]="coffee.notes"></textarea>
+    </mat-input-container>
+  </mat-card>
+
+
+  <mat-card>
+    <button mat-raised-button color="accent" (click)="cancel()">Cancel</button>
+    <button mat-raised-button color="primary" (click)="save()">Save</button>
+  </mat-card>
+</form>
