--- a/coffee/src/app/list/list.component.html
+++ b/coffee/src/app/list/list.component.html
@@ -1,9 +1,11 @@
 <mat-card *ngFor="let coffee of list">
   <mat-card-title>{{ coffee.name }}</mat-card-title>
   <mat-card-subtitle>Place: {{ coffee.place }}</mat-card-subtitle>
+  <hr>
   <mat-card-actions>
-    <button mat-button><mat-icon>map</mat-icon></button>
-    <button mat-button><mat-icon>share</mat-icon></button>
-    <button mat-button><mat-icon>list</mat-icon></button>
+    <button (click)="onMap(coffee)" mat-button><mat-icon>map</mat-icon></button>
+    <button (click)="onShare(coffee)" mat-button><mat-icon>share</mat-icon></button>
+    <button (click)="onDetails(coffee)" mat-button><mat-icon>list</mat-icon></button>
   </mat-card-actions>
 </mat-card>
+<a id="btnCreate" mat-fab routerLink="/coffee" ><mat-icon>create</mat-icon></a>
